--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 		<module>scribble-test</module>
 		<module>scribble-dist</module>
 		<module>scribble-demos</module>
+		<module>scribble-ocaml</module>
 	</modules>
 
 	<dependencyManagement>
@@ -111,6 +112,11 @@
 			<dependency>
 				<groupId>org.scribble</groupId>
 				<artifactId>scribble-codegen</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.scribble</groupId>
+				<artifactId>scribble-ocaml</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
