--- a/scribble-ocaml/pom.xml
+++ b/scribble-ocaml/pom.xml
@@ -32,6 +32,10 @@
 			<artifactId>scribble-codegen</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.scribble</groupId>
+			<artifactId>scribble-f17</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
